V 2.0 Inicio S y registro ok, Convertir Cl a adm Ok convertir/ anadir CL A barbero, ACOMODAMOS EL UPDATE, Desvincula el barbarbero, prueba de reservas, envia mails, editar barbero horarios, haciendo eliminar barberia faltan notificaicones en php

--- a/app/src/main/res/layout/dialogmodobarbero.xml
+++ b/app/src/main/res/layout/dialogmodobarbero.xml
@@ -3,255 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="350dp"
     android:layout_height="match_parent"
     android:padding="20px"
-    android:background="@color/backGroudMain">
+    >
 
-        <LinearLayout
-            android:id="@+id/LinealNITverificar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:inputType="number"
-            android:gravity="center"
+            <Spinner
+                android:textAlignment="center"
+                android:id="@+id/spBarberiasDelAdmin"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+               />
 
-            >
-            <TextView
-                android:id="@+id/textTituloDialog"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="#ffffff"
-                android:text="Complete la información como barbero"
-                android:textSize="25dp" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Ingrese el nit de la barberia a la que pertenece:"
-                android:textColor="#ffffff"
-                >
-            </TextView>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center">
-            <EditText
-                android:id="@+id/EtxNitPeluqueriaPerteneceBarberoMODO"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#FFFFFF"
-                android:hint="Nit                                "
-                android:inputType="number"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"></EditText>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:id="@+id/ButtonVerificarNITmodo"
-                android:text="Verificar"></Button>
 </LinearLayout>
-        </LinearLayout>
-        <!-- lINEA INGRESE HORA INICIO DEL BARBERO -->
-        <LinearLayout
-            android:id="@+id/LinealBarberoInicio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="#ffffff"
-            android:textColorHint="#ffffff"
-            >
-
-            <EditText
-                android:id="@+id/et_mostrar_hora_picker_inicio_MODO"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#FFFFFF"
-                android:editable="false"
-                android:ems="10"
-                android:enabled="false"
-                android:hint="@string/h_inicio"
-                android:inputType="time"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff" />
-
-
-            <ImageButton
-                android:id="@+id/ib_obtener_hora_inicioMODO"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_access_time_white_24dp"
-                tools:ignore="ContentDescription"
-
-                />
-
-        </LinearLayout>
-        <!-- lINEA INGRESE HORA FIN DEL BARBERO -->
-        <LinearLayout
-            android:id="@+id/LinealBarberoFin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-
-            >
-
-            <EditText
-                android:id="@+id/et_mostrar_hora_picker_fin_MODO"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#FFFFFF"
-                android:editable="false"
-                android:ems="10"
-                android:enabled="false"
-                android:hint="@string/h_fin"
-                android:inputType="time"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"
-                app:layout_constraintLeft_toLeftOf="parent" />
-
-            <ImageButton
-                android:id="@+id/ib_obtener_hora_finMODO"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_access_time_white_24dp"
-                tools:ignore="ContentDescription"
-            />
-
-
-
-        </LinearLayout>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        >
-        <View
-            android:layout_width="7dp"
-            android:layout_height="2dp" />
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/white" />
-        <View
-            android:layout_width="7dp"
-            android:layout_height="2dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/whiteText"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:text="Seleccione Los dias en que NO labora"></TextView>
-        <HorizontalScrollView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <TableRow
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content">
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:shadowColor="@color/whiteText"
-                        android:buttonTint="@color/whiteText"
-                        android:id="@+id/chLunesMD"></CheckBox>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/whiteText"
-                        android:id="@+id/chMartesMD"></CheckBox>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/whiteText"
-                        android:id="@+id/chMiercolesMD"></CheckBox>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/whiteText"
-                        android:id="@+id/chJuevesMD"></CheckBox>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/whiteText"
-                        android:id="@+id/chViernesMD"></CheckBox>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/whiteText"
-                        android:id="@+id/chSabadoMD"></CheckBox>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/whiteText"
-                        android:id="@+id/chDomingoMD"></CheckBox>
-                </TableRow>
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/whiteText"
-                        android:text="Lunes  "></TextView>
-                    <TextView
-                        android:textColor="@color/whiteText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Martes  "></TextView>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textColor="@color/whiteText"
-                        android:layout_height="wrap_content"
-                        android:text="Miercoles  "></TextView>
-                    <TextView
-                        android:textColor="@color/whiteText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Jueves  "></TextView>
-                    <TextView
-                        android:textColor="@color/whiteText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Viernes  "></TextView>
-                    <TextView
-                        android:textColor="@color/whiteText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Sabado  "></TextView>
-                    <TextView
-                        android:textColor="@color/whiteText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Domingo  "></TextView>
-
-                </TableRow>
-
-            </TableLayout>
-        </HorizontalScrollView>
-    </LinearLayout>
-        <Button
-            android:id="@+id/butonAceptarMODO"
-            android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:text="Debe verificar el NIT"
-            android:clickable="false"
-            android:enabled="false"
-            android:layout_height="wrap_content"></Button>
-    </LinearLayout>
-
