--- a/app/src/main/res/layout/fragment_editar_barber.xml
+++ b/app/src/main/res/layout/fragment_editar_barber.xml
@@ -43,6 +43,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/NIT"
                     android:textColor="@color/whiteText"
+
                     android:textStyle="bold"/>
 
                 <EditText
@@ -50,6 +51,7 @@
                     android:id="@+id/editTextNITEditarbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:editable="false"
                     android:text="@string/NIT"
                     android:textColor="@color/whiteText"></EditText>
 
