--- a/app/src/main/res/layout/fragment_editar_barbero.xml
+++ b/app/src/main/res/layout/fragment_editar_barbero.xml
@@ -238,6 +238,7 @@
         android:layout_width="10dp"
         android:layout_height="12dp"/>
         <TextView
+            android:id="@+id/desvincularBarbero"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15dp"
