--- a/app/src/main/res/layout/fragment_mispeluquerosfragment.xml
+++ b/app/src/main/res/layout/fragment_mispeluquerosfragment.xml
@@ -76,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/misPeluTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
