V 2.0 Inicio S y registro ok, Convertir Cl a adm Ok convertir/ anadir CL A barbero, ACOMODAMOS EL UPDATE, Desvincula el barbarbero, prueba de reservas, envia mails, editar barbero horarios, haciendo eliminar barberia faltan notificaicones en php, version sin engine

--- a/app/src/main/res/layout/activity_main_profile.xml
+++ b/app/src/main/res/layout/activity_main_profile.xml
@@ -126,12 +126,15 @@
                     android:text="@string/Ciudad"
                     android:textStyle="bold"
                     android:textColor="@color/whiteText" />
-            <EditText
+
+            <Spinner
+                android:textAlignment="center"
                 android:id="@+id/CiudadPerfil"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Ciudad"
-                android:textColor="@color/whiteText"></EditText>
+                android:backgroundTint="#FFFFFF"
+                android:textColor="#000000"
+                android:textColorHint="#ffffff"/>
         </LinearLayout>
 
 
