--- a/app/src/main/res/layout/fragment_anadirpeluqueroapeluqueria.xml
+++ b/app/src/main/res/layout/fragment_anadirpeluqueroapeluqueria.xml
@@ -20,6 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColorHint="@color/whiteText"
+            android:ems="10"
+            android:inputType="number"
             android:layout_weight="1"
             android:textColor="@color/whiteText"
             android:hint="Teléfono"></EditText>
