--- a/app/src/main/res/layout/activity_main_loggin.xml
+++ b/app/src/main/res/layout/activity_main_loggin.xml
@@ -24,14 +24,17 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             tools:context=".MainLogginActivity">
 
-
             <ImageView
                 android:id="@+id/imageViewLogo"
-                android:layout_width="217dp"
-                android:layout_height="237dp"
+                android:layout_width="180dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="36dp"
                 app:srcCompat="@drawable/logotransparente" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,21 +42,18 @@
                 android:orientation="horizontal"
                 android:textColor="#FFFFFFFF">
 
-                <TextView
-                    android:id="@+id/tvNombre"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:text="Teléfono:"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="14dp"></TextView>
 
                 <EditText
+                    android:drawableLeft="@drawable/phone"
+                    android:drawablePadding="20dp"
+                    android:drawableTint="@color/GRAY"
                     android:id="@+id/editUsuarioLoggin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:backgroundTint="#FFFFFF"
-
+                    android:hint="Teléfono"
+                    android:textColorHint="@color/GRAY"
                     android:ems="14"
                     android:inputType="phone"
                     android:textColor="#ffffff" />
@@ -66,18 +66,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:text="Contraseña:"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="14dp"></TextView>
-
                 <EditText
+                    android:drawableLeft="@drawable/key"
+                    android:drawableTint="@color/GRAY"
+                    android:textColorHint="@color/GRAY"
+                    android:drawablePadding="20dp"
                     android:id="@+id/editTextPasswordLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:hint="Contraseña"
                     android:backgroundTint="#FFFFFF"
                     android:ems="14"
                     android:inputType="textPassword"
@@ -108,10 +106,10 @@
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="5dp" />
+                android:layout_height="10dp" />
 
             <com.facebook.login.widget.LoginButton
-                android:id="@+id/buttonLoggin"
+                android:id="@+id/buttonLogginFacebook"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_gravity="center_horizontal"
@@ -120,7 +118,7 @@
 
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="5dp" />
+                android:layout_height="10dp" />
 
 
             <TextView
@@ -135,6 +133,8 @@
                 android:text="¿Aún no estás registrado? Registrarme"
                 android:textColor="#FFFFFFFF"
                 android:textSize="16dp" />
+
+
         </LinearLayout>
 
 
