--- a/app/src/main/res/layout/activity_main_profile.xml
+++ b/app/src/main/res/layout/activity_main_profile.xml
@@ -229,6 +229,7 @@
                 android:padding="10dp">
 
                 <TextView
+                    android:id="@+id/textViewCambiarClavePerfil"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cambiar Contraseña"
