--- a/app/src/main/res/layout/activity_main_registar_user.xml
+++ b/app/src/main/res/layout/activity_main_registar_user.xml
@@ -38,6 +38,10 @@
                 android:text="Seleccione Imagen de perfil" />
 
             <EditText
+                android:drawableLeft="@drawable/phone"
+                android:drawableTint="@color/GRAY"
+                android:textColorHint="@color/GRAY"
+                android:drawablePadding="20dp"
                 android:id="@+id/etxt_cellPhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,10 +50,13 @@
                 android:hint="Teléfono celular"
                 android:inputType="phone"
                 android:backgroundTint="#FFFFFF"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"/>
+                android:textColor="#ffffff"/>
 
             <EditText
+                android:drawableLeft="@drawable/people"
+                android:drawableTint="@color/GRAY"
+                android:textColorHint="@color/GRAY"
+                android:drawablePadding="20dp"
                 android:id="@+id/etxt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,10 +67,13 @@
                 app:layout_constraintBottom_toTopOf="@+id/etxt_lastname"
                 tools:layout_editor_absoluteX="0dp"
                 android:backgroundTint="#FFFFFF"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"/>
+                android:textColor="#ffffff"/>
 
             <EditText
+                android:drawableLeft="@drawable/people"
+                android:drawableTint="@color/GRAY"
+                android:textColorHint="@color/GRAY"
+                android:drawablePadding="20dp"
                 android:id="@+id/etxt_lastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -73,10 +83,13 @@
                 android:inputType="textPersonName"
                 app:layout_constraintTop_toBottomOf="@+id/etxt_name"
                 android:backgroundTint="#FFFFFF"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"/>
+                android:textColor="#ffffff" />
 
             <EditText
+                android:drawableTint="@color/GRAY"
+                android:drawableLeft="@drawable/emailicon"
+                android:textColorHint="@color/GRAY"
+                android:drawablePadding="20dp"
                 android:id="@+id/etxt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -87,10 +100,13 @@
                 app:layout_constraintTop_toTopOf="@+id/etxt_lastname"
                 tools:layout_editor_absoluteX="0dp"
                 android:backgroundTint="#FFFFFF"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"/>
+                android:textColor="#ffffff" />
 
             <EditText
+                android:drawableLeft="@drawable/key"
+                android:drawableTint="@color/GRAY"
+                android:textColorHint="@color/GRAY"
+                android:drawablePadding="20dp"
                 android:id="@+id/etxt_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -102,29 +118,25 @@
                 app:layout_constraintTop_toTopOf="@+id/etxt_email"
                 tools:layout_editor_absoluteX="-16dp"
                 android:backgroundTint="#FFFFFF"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"
-                />
+                android:textColor="#ffffff"/>
 
 
             <TextView
                 android:id="@+id/textViewTituloCiudad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Su ciudad"
+                android:text="Ciudad"
                 android:gravity="center"
-                android:backgroundTint="#FFFFFF"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"/>
+                android:textColor="@color/GRAY"/>
 
             <Spinner
                 android:textAlignment="center"
                 android:id="@+id/ciudad_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#FFFFFF"
-                android:textColor="#000000"
-                android:textColorHint="#ffffff"/>
+                android:backgroundTint="@color/GRAY"
+                android:textColor="@color/black_overlay"
+                android:textColorHint="@color/GRAY"/>
 
             <EditText
                 android:id="@+id/etxt_CIUDAD"
