--- a/app/src/main/res/layout/fragment_anadirpeluqueroapeluqueria.xml
+++ b/app/src/main/res/layout/fragment_anadirpeluqueroapeluqueria.xml
@@ -9,17 +9,24 @@
     android:orientation="vertical"
     android:padding="20dp">
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Afiliar usuario"
+        android:textSize="18dp"
+        android:textColor="@color/whiteText"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+
         <EditText
+            android:drawableTint="@color/GRAY"
             android:id="@+id/etTelefonoAnadir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/whiteText"
+            android:textColorHint="@color/GRAY"
             android:ems="10"
             android:inputType="number"
             android:layout_weight="1"
@@ -46,6 +53,13 @@
         android:layout_width="match_parent"
         android:layout_height="15dp"
         />
+    <TextView
+        android:id="@+id/sinResultados"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sin resultados"
+        android:textSize="13dp"
+        android:textColor="@color/whiteText"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRecycleBarberosAgregar"
         android:layout_width="match_parent"
